--- a/env.yaml
+++ b/env.yaml
@@ -1,6 +1,7 @@
 name: brain
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - appnope=0.1.3=pyhd8ed1ab_0
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
@@ -21,6 +22,7 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cctools_osx-arm64=973.0.1=ha8964d5_10
+  - certifi=2021.10.8=py310hbe9552e_2
   - cffi=1.15.0=py310hf10583b_0
   - clang=13.0.1=hce30654_0
   - clang-13=13.0.1=default_h2cfa9b4_0
@@ -172,7 +174,6 @@ dependencies:
   - pip:
     - appdirs==1.4.4
     - autopep8==1.6.0
-    - certifi==2021.10.8
     - charset-normalizer==2.0.12
     - freetype-py==2.3.0
     - fuzzywuzzy==0.18.0
@@ -185,7 +186,7 @@ dependencies:
     - mne==1.0.2
     - molesq==0.4.0
     - morphops==0.1.13
-    - navis==1.2.1
+    - navis==1.3.0
     - ncollpyde==0.19.0
     - nengo==3.2.0
     - nengo-gui==0.4.8
@@ -211,7 +212,7 @@ dependencies:
     - threadpoolctl==3.1.0
     - toml==0.10.2
     - tqdm==4.64.0
-    - trimesh==3.11.2
+    - trimesh==3.12.0
     - tvb-data==2.0
     - tvb-library==2.4
     - typing==3.7.4.3
